// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Linkd Linkd default renders correctly 1`] = `
<DocumentFragment>
  <a
    class="Button Button__plain Button__lean Linkd"
    href="/"
  >
    <svg
      aria-hidden="true"
      class="Icon Icon__left"
      fill="#000"
      height="14px"
      width="14px"
    >
      Chevron-Right.svg
    </svg>
    <svg>
      Alert.svg
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Linkd Linkd external renders correctly 1`] = `
<DocumentFragment>
  <a
    class="Button Button__plain Button__lean Linkd"
    href="/"
    rel="external noopener noreferrer"
  >
    <svg
      aria-hidden="true"
      class="Icon Icon__left"
      fill="#000"
      height="14px"
      width="14px"
    >
      Chevron-Right.svg
    </svg>
    Link!
  </a>
</DocumentFragment>
`;

exports[`Linkd Renders 1`] = `
<DocumentFragment>
  <a
    class="Button Button__plain Button__lean Linkd"
    href="/"
  >
    <svg
      aria-hidden="true"
      class="Icon Icon__left"
      fill="#000"
      height="14px"
      width="14px"
    >
      Chevron-Right.svg
    </svg>
    Link!
  </a>
</DocumentFragment>
`;
